--- a/app/src/main/res/layout/popup_test.xml
+++ b/app/src/main/res/layout/popup_test.xml
@@ -12,14 +12,10 @@
     <ImageView
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/submissionImageMain"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_height="0dp"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintBottom_toTopOf="@+id/guideline7"
-        android:layout_width="0dp" />
+        android:layout_height="301dp"
+        android:layout_width="300dp"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="0dp" />
 
     <TextView
         android:text="TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, "
@@ -85,30 +81,31 @@
         android:layout_height="0dp"
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/submissionSubmitterProfileImage"
-        app:layout_constraintBottom_toTopOf="@+id/guideline9"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reportDescription" />
+        tools:layout_editor_absoluteX="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/submissionTitle"
+        app:layout_constraintBottom_toTopOf="@+id/submissionDate"
+        android:layout_marginBottom="8dp" />
 
     <TextView
         android:text="Name Here"
         android:layout_width="125dp"
         android:layout_height="26dp"
         android:id="@+id/submissionSubmitterName"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/reportDescription"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/submissionSubmitterProfileImage" />
+        app:layout_constraintLeft_toRightOf="@+id/submissionSubmitterProfileImage"
+        android:layout_marginStart="24dp"
+        app:layout_constraintTop_toTopOf="@+id/submissionSubmitterProfileImage"
+        android:layout_marginTop="16dp" />
 
     <TextView
         android:text="Rank Here"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/submissionSubmitterRank"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/submissionSubmitterName"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/submissionSubmitterProfileImage" />
+        android:layout_marginStart="24dp"
+        app:layout_constraintLeft_toRightOf="@+id/submissionSubmitterProfileImage"
+        app:layout_constraintBottom_toBottomOf="@+id/submissionSubmitterProfileImage"
+        app:layout_constraintTop_toBottomOf="@+id/submissionSubmitterName" />
 
     <TextView
         android:text="01.01.2001"
@@ -155,6 +152,18 @@
         app:layout_constraintGuide_percent="0.092"
         tools:layout_editor_absoluteY="46dp"
         tools:layout_editor_absoluteX="0dp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/submissionTitle"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/reportDescription"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
