--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -5,35 +5,214 @@
     android:id="@+id/activity_new_user"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.luke.lukef.lukeapp.NewUserActivity"
     android:fitsSystemWindows="true">
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/newUserName"
-        android:layout_marginStart="16dp"
+        android:hint="Choose a username"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline17"
+        app:layout_constraintTop_toTopOf="@+id/guideline18"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="208dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:hint="Choose a username" />
+        android:layout_marginStart="16dp" />
 
-    <Button
-        android:text="Confirm"
-        android:layout_width="wrap_content"
+    <ImageView
+        android:layout_height="0dp"
+        app:srcCompat="@drawable/admin_marker"
+        android:id="@+id/newUserDefault"
+        android:layout_width="0dp"
+        app:layout_constraintVertical_bias="0.56"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline20"
+        app:layout_constraintBottom_toTopOf="@+id/guideline19"
+        app:layout_constraintRight_toLeftOf="@+id/guideline21" />
+
+    <ImageView
+        android:layout_height="0dp"
+        app:srcCompat="@mipmap/take_photo"
+        android:id="@+id/newUserCamera"
+        android:layout_width="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline18"
+        app:layout_constraintTop_toBottomOf="@+id/newUserDefault"
+        app:layout_constraintRight_toLeftOf="@+id/guideline21" />
+
+    <ImageView
+        android:layout_height="0dp"
+        app:srcCompat="@drawable/admin_marker"
+        android:id="@+id/newUserSocialMedia"
+        android:layout_width="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline20"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/guideline21"
+        app:layout_constraintTop_toTopOf="@+id/guideline22" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="384dp"
         android:layout_height="wrap_content"
-        android:id="@+id/newUserConfirmButton"
-        app:layout_constraintLeft_toLeftOf="@+id/newUserName"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/newUserName" />
+        android:id="@+id/guideline17"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.9"
+        tools:layout_editor_absoluteY="576dp"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="384dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline18"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.8"
+        tools:layout_editor_absoluteY="512dp"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="384dp"
+        android:layout_height="0dp"
+        android:id="@+id/guideline19"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.56875"
+        tools:layout_editor_absoluteY="364dp"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="384dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline20"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.3359375"
+        tools:layout_editor_absoluteY="215dp"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="640dp"
+        android:id="@+id/guideline21"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.6051136"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="232dp" />
+
+    <RadioGroup
+        android:layout_width="48dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline18"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline22"
+        android:id="@+id/radioGroupPicture"
+        android:checkedButton="@+id/radioButton3">
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioButton2"
+            android:layout_weight="1" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioButton3"
+            android:layout_weight="1" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioButton"
+            android:layout_weight="1" />
+    </RadioGroup>
+
+    <android.support.constraint.Guideline
+        android:layout_width="384dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline22"
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteY="67dp"
+        tools:layout_editor_absoluteX="0dp"
+        app:layout_constraintGuide_percent="0.1046875" />
+
+    <TextView
+        android:text="Choose a profile picture"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/textView3"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/newUserSocialMedia"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+    <TextView
+        android:text="Default"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView4"
+        app:layout_constraintRight_toLeftOf="@+id/radioGroupPicture"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline21"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:layout_marginStart="8dp"
+        app:layout_constraintHorizontal_bias="0.66"
+        app:layout_constraintTop_toTopOf="@+id/guideline20"
+        app:layout_constraintBottom_toTopOf="@+id/guideline19" />
+
+    <TextView
+        android:text="Social Media"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView5"
+        app:layout_constraintTop_toTopOf="@+id/guideline22"
+        app:layout_constraintBottom_toTopOf="@+id/guideline20"
+        app:layout_constraintRight_toLeftOf="@+id/radioGroupPicture"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline21"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:layout_marginStart="8dp" />
+
+    <TextView
+        android:text="Camera"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView6"
+        app:layout_constraintRight_toLeftOf="@+id/radioGroupPicture"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline21"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:layout_marginStart="8dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toTopOf="@+id/guideline19"
+        app:layout_constraintBottom_toTopOf="@+id/guideline18" />
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@+id/guideline17"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:background="@color/colorPrimaryDark">
+
+        <ImageButton
+            android:text="Confirm"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:id="@+id/newUserConfirmButton"
+            app:srcCompat="@drawable/luke_tick"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@null"
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="16dp" />
+    </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
