--- a/app/src/main/res/layout/popup_categories_item.xml
+++ b/app/src/main/res/layout/popup_categories_item.xml
@@ -17,6 +17,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="16dp"
+        android:focusable="false"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -28,6 +29,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/popup_category_title"
         android:layout_marginStart="8dp"
+        android:focusable="false"
         app:layout_constraintLeft_toRightOf="@+id/popup_category_image"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,14 +40,16 @@
         android:layout_height="wrap_content"
         android:id="@+id/popup_category_description"
         android:layout_marginStart="8dp"
+        android:focusable="false"
         app:layout_constraintLeft_toRightOf="@+id/popup_category_image"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/popup_category_title" />
 
     <CheckBox
+        android:clickable="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/categories_checkbox"
+        android:id="@+id/popup_categories_checkbox"
         app:layout_constraintLeft_toLeftOf="@+id/popup_category_description"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
