--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_map"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:layout_height="match_parent">
 
         <fragment
             android:id="@+id/googleMapFragment"
@@ -38,7 +37,8 @@
         app:layout_constraintTop_toTopOf="@+id/guideline14"
         app:layout_constraintBottom_toBottomOf="parent"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        android:paddingRight="16dp"
+        android:background="@color/colorPrimaryDark">
 
             <ImageButton
                 android:id="@+id/button_menu"
