--- a/app/src/main/res/layout/fragment_new_submission_2.xml
+++ b/app/src/main/res/layout/fragment_new_submission_2.xml
@@ -59,7 +59,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline4"
         android:id="@+id/relativeLayout"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorPrimaryDark"
         android:paddingLeft="16dp"
         android:paddingRight="16dp">
         <ImageButton
@@ -100,6 +100,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:inputType="textMultiLine"
+        android:gravity="bottom"
         android:ems="10"
         android:id="@+id/newSubmissionEditTextDescrption"
         android:layout_marginTop="8dp"
