--- a/app/src/main/res/layout/popup_categories_item.xml
+++ b/app/src/main/res/layout/popup_categories_item.xml
@@ -32,7 +32,9 @@
         android:focusable="false"
         app:layout_constraintLeft_toRightOf="@+id/popup_category_image"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/popup_categories_checkbox"
+        android:layout_marginEnd="8dp" />
 
     <TextView
         android:text="@string/category_description"
@@ -43,14 +45,15 @@
         android:focusable="false"
         app:layout_constraintLeft_toRightOf="@+id/popup_category_image"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/popup_category_title" />
+        app:layout_constraintTop_toBottomOf="@+id/popup_category_title"
+        app:layout_constraintRight_toLeftOf="@+id/popup_categories_checkbox"
+        android:layout_marginEnd="8dp" />
 
     <CheckBox
         android:clickable="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/popup_categories_checkbox"
-        app:layout_constraintLeft_toLeftOf="@+id/popup_category_description"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="16dp"
