--- a/app/src/main/res/layout/popup_submission.xml
+++ b/app/src/main/res/layout/popup_submission.xml
@@ -44,7 +44,7 @@
         android:id="@+id/guideline7"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.68"
-        tools:layout_editor_absoluteY="301dp"
+        tools:layout_editor_absoluteY="340dp"
         tools:layout_editor_absoluteX="0dp" />
 
     <android.support.constraint.Guideline
@@ -71,7 +71,7 @@
         android:id="@+id/guideline11"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5"
-        tools:layout_editor_absoluteY="203dp"
+        tools:layout_editor_absoluteY="250dp"
         tools:layout_editor_absoluteX="0dp" />
 
     <ImageView
@@ -129,10 +129,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/submissionCategoriesLinear"
-        app:layout_constraintRight_toLeftOf="@+id/guideline10"
-        android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
-        android:layout_marginBottom="8dp" />
+        app:layout_constraintRight_toLeftOf="@+id/submissionReportButton"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp" />
 
     <ImageButton
         android:text="Button"
