--- a/app/src/main/res/layout/popup_submission.xml
+++ b/app/src/main/res/layout/popup_submission.xml
@@ -84,7 +84,8 @@
         app:layout_constraintBottom_toTopOf="@+id/submissionDate"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:text="Name Here"
