--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,14 +10,14 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher"
         app:layout_constraintRight_toLeftOf="@+id/guideline24"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/usernamedisplay"
@@ -25,9 +25,9 @@
         android:layout_height="28dp"
         android:layout_marginEnd="8dp"
         android:text="TextView"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline24"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/profieImage"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline24" />
+        app:layout_constraintTop_toTopOf="@+id/profieImage" />
 
     <TextView
         android:id="@+id/title"
@@ -43,15 +43,15 @@
     <ProgressBar
         android:id="@+id/scoreBar"
         style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_width="0dp"
         android:layout_height="29dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="@+id/title"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -91,6 +91,7 @@
         </LinearLayout>
     </android.support.v4.app.FragmentTabHost>-->
     <LinearLayout
+        android:id="@+id/tabLayoutLinearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
@@ -98,19 +99,19 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline"
-        android:id="@+id/linearLayout">
+        android:visibility="visible">
 
         <android.support.design.widget.TabLayout
+            android:id="@+id/tabLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tabLayout">
+            android:layout_height="wrap_content">
 
         </android.support.design.widget.TabLayout>
 
         <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/viewPager">
+            android:layout_height="match_parent">
 
         </android.support.v4.view.ViewPager>
     </LinearLayout>
@@ -119,45 +120,56 @@
         android:id="@+id/bottomBarMap"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/colorPrimaryDark"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="@color/colorPrimaryDark">
+        app:layout_constraintTop_toTopOf="@+id/guideline2">
 
         <ImageButton
             android:id="@+id/button_back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
+            android:layout_marginLeft="16dp"
+            android:background="@null"
             android:elevation="4dp"
             android:text="Button"
-            app:srcCompat="@drawable/luke_back"
-            android:background="@null"
-            android:layout_marginLeft="16dp"/>
-            />
+            app:srcCompat="@drawable/luke_back" />
+        />
     </RelativeLayout>
 
     <android.support.constraint.Guideline
+        android:id="@+id/guideline24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guideline24"
         android:orientation="vertical"
-        tools:layout_editor_absoluteY="0dp"
+        app:layout_constraintGuide_percent="0.4"
         tools:layout_editor_absoluteX="154dp"
-        app:layout_constraintGuide_percent="0.4" />
+        tools:layout_editor_absoluteY="0dp" />
 
     <TextView
-        android:text="9001"
+        android:id="@+id/progressTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/progressTextView"
-        app:layout_constraintRight_toRightOf="@+id/scoreBar"
-        app:layout_constraintLeft_toLeftOf="@+id/scoreBar"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        app:layout_constraintBottom_toBottomOf="@+id/scoreBar" />
+        android:text="9001"
+        app:layout_constraintBottom_toBottomOf="@+id/scoreBar"
+        app:layout_constraintLeft_toLeftOf="@+id/scoreBar"
+        app:layout_constraintRight_toRightOf="@+id/scoreBar"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
+
+    <ProgressBar
+        android:id="@+id/progressBarProfile"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
 
 
 </android.support.constraint.ConstraintLayout>
