--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -107,7 +107,7 @@
         tools:layout_editor_absoluteX="126dp"
         tools:layout_editor_absoluteY="0dp" />
 
-    <com.luke.lukef.lukeapp.customviews.InconsolataTextView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
